Update new version of paper

--- a/paper.bib
+++ b/paper.bib
@@ -40,3 +40,41 @@
   pages = {2825--2830},
   year = {2011}
 }
+
+@article{Dwork2014,
+  title = {The algorithmic foundations of differential privacy},
+  author = {Dwork, Cynthia and Roth, Aaron},
+  journal = {Foundations and Trends in Theoretical Computer Science},
+  volume = {9},
+  number = {3-4},
+  pages = {211--407},
+  year = {2014},
+  publisher = {Now Publishers Inc},
+  doi = {10.1561/0400000042}
+}
+
+@inproceedings{Abadi2016,
+  title = {Deep learning with differential privacy},
+  author = {Abadi, Martin and Chu, Andy and Goodfellow, Ian and McMahan, H Brendan and Mironov, Ilya and Talwar, Kunal and Zhang, Li},
+  booktitle = {Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+  pages = {308--318},
+  year = {2016},
+  organization = {ACM},
+  doi = {10.1145/2976749.2978318}
+}
+
+@misc{Wilson2020,
+  title = {Google Differential Privacy Library},
+  author = {Wilson, Royce J. and Zhang, Celia Yuxin and Lam, William and Desfontaines, Damien and Simmons-Marengo, Daniel and Gipson, Bryant},
+  year = {2020},
+  howpublished = {\url{https://github.com/google/differential-privacy}},
+  note = {Accessed: 2025-04-14}
+}
+
+@misc{Gaboardi2020,
+  title = {OpenDP: The {OpenDP} Library},
+  author = {Gaboardi, Marco and Hay, Michael and Vadhan, Salil},
+  year = {2020},
+  howpublished = {\url{https://github.com/opendp/opendp}},
+  note = {Accessed: 2025-04-14}
+}
